# buildbuddy-kind

./: .bazelrc  BUILD.bazel  Dockerfile  WORKSPACE  buildbuddy.yaml  cloud.sh  push.sh  self_hosted.sh  test.sh
rules/tools/kind/: BUILD.bazel  kind.bzl
