sh_test(
    name = "test",
    srcs = [
        "test.sh",
    ],
    args = [
        "$(KIND)",
    ],
    data = [
        "//rules/tools/kind:kind_alias",
    ],
    exec_properties = {
        "test.workload-isolation-type": "firecracker",
        "test.init-dockerd": "true",
        "test.recycle-runner": "true",
        "EstimatedComputeUnits": "2",
        "EstimatedFreeDiskBytes": "10GB",
    },
    tags = [],
    toolchains = [
        "//rules/tools/kind:kind_alias",
    ],
)

sh_test(
    name = "self_hosted",
    srcs = [
        "self_hosted.sh",
    ],
    args = [
        "$(KIND)",
    ],
    data = [
        "//rules/tools/kind:kind_alias",
    ],
    exec_properties = {
        # "test.workload-isolation-type": "firecracker",
        # "test.init-dockerd": "true",
        # "test.recycle-runner": "true",
        # "EstimatedComputeUnits": "2",
        # "EstimatedFreeDiskBytes": "10GB",
    },
    tags = [],
    toolchains = [
        "//rules/tools/kind:kind_alias",
    ],
)